--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "landing_page_bank",
   "version": "0.1.0",
-  "homepage": "https://b1ell20.github.io/Digital_bank/public/",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
